# NewNottarb

./: .gitattributes  .gitignore  HANDOFF.md  LAST-findings.md  PLAN.md  README.md  assert-last-dryrun.mjs  assert-last-live.mjs  grpc-last.mjs  last-atomic-write.mjs  last-grpc-active-lookup-tables.txt  last-live-fee-payer-preflight.mjs  last-live-reader-rpc.mjs  last-notarb-supervisor.mjs  last-route-to-notarb.mjs  lookup-tables.txt  migrate-last-live-config.mjs  notarb-last-grpc-dryrun.example.toml  notarb-last-grpc-live.example.toml  notarb.observed-route.template.toml  package-lock.json  package.json  run-grpc-last.cmd  run-last-notarb-live-supervisor.cmd  run-last-notarb-live-supervisor.sh  run-last-notarb-supervisor.cmd  run-last-route-to-notarb.cmd  run-last-rust-pipeline.sh  run-notarb-last-target-dryrun.cmd  run-notarb-last-target-live.cmd  run-notarb-last-target-live.sh  stream-last.mjs  test-last-atomic-write.mjs  test-last-live-config.mjs  test-last-live-fee-payer-preflight.mjs  test-last-live-reader-rpc.mjs  test-last-notarb-supervisor.mjs  test-last-route-bridge.mjs  test-migrate-last-live-config.mjs  watch-last.mjs
.github/workflows/: deploy.yml
deploy/systemd/: notarb-last-live-supervisor.service  notarb-last-pipeline.service
rust/last-route-bridge/: Cargo.toml  run-wsl.sh
rust/last-route-bridge/src/: main.rs
