[package]
name = "last-route-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "=1.0.86"
base64 = "=0.22.1"
bs58 = "=0.5.1"
chrono = { version = "=0.4.38", default-features = false, features = ["clock"] }
serde_json = { version = "=1.0.120", features = ["preserve_order"] }
sha2 = "=0.10.8"
ureq = { version = "=2.10.1", features = ["json"] }
